Disable route /user/login, new route is /auth/login
