# app/app.js
@@ -22,7 +22,6 @@ var ping = require(__base + 'app/route/ping');
 
 var client = require(__base + 'app/route/v1/client');
 
-var userLogin = require(__base + 'app/route/v1/user/login');
 var userFriend = require(__base + 'app/route/v1/user/friend');
 var userInfo = require(__base + 'app/route/v1/user/info');
 
@@ -34,7 +33,6 @@ app.use('/ping', ping);
 
 app.use('/v1/client', client);
 
-app.use('/v1/user/login', userLogin);
 app.use('/v1/user/info', userInfo);
 app.use('/v1/user/friend', userFriend);
 
